sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '(' expected but identifier found.
		if plusPetit(i,i+1){
                   ^AlgBubbleSort1:10: error: illegal start of simple expression
	}
        ^